--- a/views/recipes.handlebars
+++ b/views/recipes.handlebars
@@ -10,6 +10,9 @@
         <li>
             <p>Name: {{this.name}}</p>
             <p>Serving Size: {{this.servingSize}}</p>
+            <form action="/recipe/{{this.name}}" method="get">
+                <button type="submit">View Recipe</button>
+            </form>
         </li>
         {{/each}}
     </ul>
