--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,7 +3,7 @@
     padding-right: 0px;
 }
 .title-board {
-    background-image: url(./download\ \(1\).jpeg);
+    background-image: url(../images/download\ \(1\).jpeg);
     border-color: blue;
     width: 100%;
     height: 15vh;
@@ -46,11 +46,12 @@ h1 {
     border-radius: 15px;
     box-shadow: 3px 4px 5px 0px rgb(18, 18, 18);
     font-size: 30px;
+    height: 50vh;
 }
 
 .right {
-    background-color: aquamarine;
-    width: 10%;
+    background-color: white;
+    width: 9%;
     display: block;
 }
 
@@ -58,28 +59,28 @@ h1 {
     background-image: url(./shopping-cart.jpeg);
     background-size: 100% 100%;
     background-repeat: no-repeat;
-    box-shadow: 3px 4px 5px 0px rgb(18, 18, 18);
     height: 33%;
+    padding: 0%;
 }
 
 .past-recipes {
     background-image: url(./past-tense.png);
     background-size: 100% 100%;
     background-repeat: no-repeat;
-    box-shadow: 3px 4px 5px 0px rgb(18, 18, 18);
     height: 33%;
+    padding: 0%;
 }
 
 .new-recipes {
     background-image: url(./recipes.png);
     background-size: 100% 100%;
     background-repeat: no-repeat;
-    box-shadow: 3px 4px 5px 0px rgb(18, 18, 18);
     height: 34%;
+    padding: 0%;
 }
 
 .login-background {
-    background-image: url(./01-The-Benefits-of-Meal-Prepping.webp);
+    background-image: url(/public/images/01-The-Benefits-of-Meal-Prepping.webp);
     background-repeat: no-repeat;
     background-size: 100% 100%;
     box-shadow: 0 0 100px rgb(18, 18, 18) inset;
@@ -141,4 +142,52 @@ form {
     padding: 16px;
   }
   
-  
+  .btn {
+    background-color: tomato;
+  }
+
+  #logged-in-background {
+    background-image: url(../images/download\ \(1\).jpeg);
+    box-shadow: 0 0 85px rgb(18, 18, 18) inset;
+    outline: solid 0.5px rgb(29, 29, 29);
+  }
+
+  #add-button {
+    align-items: flex-end;
+  }
+
+  #shop-button {
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    background-image: url(../images/shopping-cart.jpeg);
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    height: 20vh;
+    background-color: white;
+    box-shadow: 3px 4px 5px 0px rgb(18, 18, 18);
+  }
+
+  #past-button {
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    background-image: url(../images/past-tense.png);
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    height: 20vh;
+    background-color: white;
+    box-shadow: 3px 4px 5px 0px rgb(18, 18, 18);
+  }
+
+  #new-button {
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    background-image: url(../images/recipes.png);
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    height: 20vh;
+    background-color: white;
+    box-shadow: 3px 4px 5px 0px rgb(18, 18, 18);
+  }
