--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,11 +6,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Let Them Cook</title>
-    <link rel="stylesheet" href="/css/jass.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
-    <header class="display-block justify-space-between align-center p-2">
+    <header class="display-block justify-space-between align-center p-2" id="logged-in-background">
 
         <nav>
             <button class="btn" id="home" onclick="(window.location='/')">Home</button>
@@ -22,11 +22,6 @@
             {{/if}}
             
         </nav>
-
-        <h1 class="ml-3">
-            LEt them CooK
-        </h1>
-
     </header>
 
     <main class="container container-fluid mt-5">
