--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,18 +1,19 @@
-<h2>Login</h2>
+<div class="login-background">
+  <h2>Login</h2>
 
-<form class="form login-form">
-  <div class="form-group">
-    <label for="email-login">email:</label>
-    <input class="form-input" type="text" id="email-login" />
+  <form class="form login-form">
+    <div class="form-group">
+      <label for="email-login">email:</label>
+      <input class="form-input" type="text" id="email-login" />
+    </div>
+    <div class="form-group">
+      <label for="password-login">password:</label>
+      <input class="form-input" type="password" id="password-login" />
+    </div>
+    <div class="form-group">
+      <button class="btn btn-primary" type="submit">Login</button>
+      <button class="btn" id="createUser" onclick="(window.location='/newUser')">Create Account</button>
   </div>
-  <div class="form-group">
-    <label for="password-login">password:</label>
-    <input class="form-input" type="password" id="password-login" />
-  </div>
-  <div class="form-group">
-    <button class="btn btn-primary" type="submit">Login</button>
-    <button class="btn" id="createUser" onclick="(window.location='/newUser')">Create Account</button>
-  </div>
-</form>
-
+  </form>
+</div>
 <script src="/js/loginForm.js"></script>
