button to add random recipe ingredients to shopping cart

--- a/views/apiRecipe.handlebars
+++ b/views/apiRecipe.handlebars
@@ -6,6 +6,10 @@
     <p id="randomRecipeServings"></p>
     <ul id="randomRecipeIngredients"></ul>
     <a id="randomRecipeLink" href="#" target="_blank">View Recipe</a>
+    {{!-- button to add recipe items to shopping cart --}}
+    <button id="addRandomToCartBtn">Add These Ingredients to Cart</button>
+    {{!-- button to add random recipe to my recipes --}}
+    <button id="addRandomToRecipeBtn">Add This Random Recipe to My Recipes</button>
 </div>
 
 <script src="/js/apiRecipe.js"></script>
