--- a/views/newRecipe.handlebars
+++ b/views/newRecipe.handlebars
@@ -20,16 +20,16 @@
                     <input type="text" name="ingredients[]" placeholder="Ingredient" required>
                     <input type="text" name="amount[]" placeholder="Amount" required>
                     <select name="units[]">
-                        <option value="g">g</option>
-                        <option value="kg">kg</option>
-                        <option value="ml">ml</option>
-                        <option value="l">l</option>
-                        <option value="tsp">tsp</option>
-                        <option value="tbsp">tbsp</option>
-                        <option value="cup">cup</option>
-                        <option value="oz">oz</option>
-                        <option value="lb">lb</option>
-                        <option value="each">each</option>
+                        <option value="G">G</option>
+                        <option value="KG">KG</option>
+                        <option value="ML">ML</option>
+                        <option value="L">L/option>
+                        <option value="TSP">TSP</option>
+                        <option value="TBSP">TBSP</option>
+                        <option value="CUP">CUP</option>
+                        <option value="OZ">OZ</option>
+                        <option value="LB">LB</option>
+                        <option value="EACH">EACH</option>
                     </select>
                     <button type="button" onclick="addIngredientField()">Add Ingredient</button>
                 </div>
