--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,1 +1,10 @@
 <button class="btn" id="viewRecipes" onclick="(window.location='/recipe')">View Recipes</button>
+
+{{#each dates as |date| }}
+<div class="card">
+  <div class="card card-header">
+    <h2 class=""> Date: {{date.month}}/{{date.day}}</h2>
+    <h5> Weekday: {{date.weekday}}</h5>
+  </div>
+</div>
+{{/each}}
