added the unit attribute to all ingredient models and views also updated the seed files

--- a/views/shoppingCart.handlebars
+++ b/views/shoppingCart.handlebars
@@ -11,7 +11,7 @@
                 {{#each items}}
                 <li>
                     <input type="checkbox" name="item" value="{{this.dataValues.name}}">
-                    <label>{{this.dataValues.name}} - {{this.dataValues.amount}}</label>
+                    <label>{{this.dataValues.name}} - {{this.dataValues.amount}} {{this.dataValues.unit}}</label>
                 </li>
                 {{/each}}
             </ul>
