--- a/views/recipeDetails.handlebars
+++ b/views/recipeDetails.handlebars
@@ -10,12 +10,12 @@
         <h3>Ingredients:</h3>
         <ul>
             {{#each recipe.Ingredients}}
-            <li>{{this.name}} - {{this.amount}}</li>
+            <li>{{this.name}} - {{this.amount}} {{this.unit}}</li>
             {{/each}}
         </ul>
         <button onclick="addAllToCart([
             {{#each recipe.Ingredients}}
-            { name: '{{name}}', amount: '{{amount}}' },
+            { name: '{{name}}', amount: '{{amount}}', unit: '{{unit}}' },
             {{/each}}
         ])">Add All to Cart</button>
         <a href="/recipe">Back</a>
