updated buttons into header

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,55 +1,28 @@
-<button class="btn" id="viewRecipes" onclick="(window.location='/recipe')">View Recipes</button>
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Data Dish</title>
-    <link rel="stylesheet" href="/public/css/style.css"/>
-    <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Roboto:ital,wght@0,700;1,100&display=swap" rel="stylesheet"/>
-</head>
 <body>
-    <header class="title-board">
-        <h1>Data Dish</h1>
-    </header>
-
     <div class="day-of-week">
         <div class="left">
             <ul class="weekday">sunday
-                <button id="add-button">Add Recipe</button>
+                <button id="add-button">+</button>
             </ul>
             <ul class="weekday">monday
-                <button id="add-button">Add Recipe</button>
+                <button id="add-button">+</button>
             </ul>
             <ul class="weekday">tuesday
-                <button id="add-button">Add Recipe</button>
+                <button id="add-button">+</button>
             </ul>
             <ul class="weekday">wednesday
-                <button id="add-button">Add Recipe</button>
+                <button id="add-button">+</button>
             </ul>
             <ul class="weekday">thursday
-                <button id="add-button">Add Recipe</button>
+                <button id="add-button">+</button>
             </ul>
             <ul class="weekday">friday
-                <button id="add-button">Add Recipe</button>
+                <button id="add-button">+</button>
             </ul>
             <ul class="weekday">saturday
-                <button id="add-button">Add Recipe</button>
-            </ul>
-        </div>
-        
-        <div class="right">
-            <ul class="shopping-list">1
-                <button id="shop-button"></button>
-            </ul>
-            <ul class="past-recipes">2
-                <button id="past-button"></button>
-            </ul>
-            <ul class="new-recipes">3
-                <button id="new-button"></button>
+                <button id="add-button">+</button>
             </ul>
         </div>
     </div>
-    
 </body>
 </html>
