--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,17 +5,17 @@
 .title-board {
     background-image: url(../images/download\ \(1\).jpeg);
     border-color: blue;
-    width: 100%;
     height: 15vh;
     box-shadow: 0 0 85px rgb(18, 18, 18) inset;
     outline: solid 0.5px rgb(29, 29, 29);
+    display: flex;
 }
 
 h1 {
     height: fit-content;
     width: fit-content;
     align-content: space-around;
-    padding-top: 20px;
+    padding-top: 15px;
     background-color: transparent;
     color: azure;
     font-family: "Lobster", sans-serif;
@@ -32,14 +32,14 @@ h1 {
 
 .left {
     display: flex;
-    width: 90%;
+    width: fit-content;
     
 }
 
 .weekday {
-    margin: 15px;
+    margin: 30px;
     background-color: tomato;
-    width: 20%;
+    width: 40%;
     text-align: center;
     font-family: "Lobster", sans-serif;
     color: aliceblue;
@@ -51,8 +51,7 @@ h1 {
 
 .right {
     background-color: white;
-    width: 9%;
-    display: block;
+
 }
 
 .shopping-list {
@@ -123,7 +122,7 @@ form {
     margin: 8px 0;
     border: none;
     cursor: pointer;
-    width: 100%;
+    width: fit-content;
   }
   
   /* Add a hover effect for buttons */
@@ -146,48 +145,12 @@ form {
     background-color: tomato;
   }
 
-  #logged-in-background {
-    background-image: url(../images/download\ \(1\).jpeg);
-    box-shadow: 0 0 85px rgb(18, 18, 18) inset;
-    outline: solid 0.5px rgb(29, 29, 29);
-  }
-
   #add-button {
     align-items: flex-end;
   }
 
-  #shop-button {
+  #nav {
     display: flex;
-    justify-content: center;
-    align-items: flex-end;
-    background-image: url(../images/shopping-cart.jpeg);
-    background-size: 100% 100%;
-    background-repeat: no-repeat;
-    height: 20vh;
-    background-color: white;
-    box-shadow: 3px 4px 5px 0px rgb(18, 18, 18);
-  }
-
-  #past-button {
-    display: flex;
-    justify-content: center;
-    align-items: flex-end;
-    background-image: url(../images/past-tense.png);
-    background-size: 100% 100%;
-    background-repeat: no-repeat;
-    height: 20vh;
-    background-color: white;
-    box-shadow: 3px 4px 5px 0px rgb(18, 18, 18);
-  }
-
-  #new-button {
-    display: flex;
-    justify-content: center;
-    align-items: flex-end;
-    background-image: url(../images/recipes.png);
-    background-size: 100% 100%;
-    background-repeat: no-repeat;
-    height: 20vh;
-    background-color: white;
-    box-shadow: 3px 4px 5px 0px rgb(18, 18, 18);
+    justify-content: flex-end;
+    height: 5vh;
   }
