added button for new recipe

--- a/views/newRecipe.handlebars
+++ b/views/newRecipe.handlebars
@@ -23,7 +23,7 @@
                         <option value="G">G</option>
                         <option value="KG">KG</option>
                         <option value="ML">ML</option>
-                        <option value="L">L/option>
+                        <option value="L">L<option>
                         <option value="TSP">TSP</option>
                         <option value="TBSP">TBSP</option>
                         <option value="CUP">CUP</option>
