--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -34,7 +34,7 @@
     </footer>
 
     {{#if logged_in}}
-    <script src="/js/logout.js"></script>
+    <script src="/js/homepage.js"></script>
     {{/if}}
 
 </body>
