working on css  for newRecipe

--- a/views/newRecipe.handlebars
+++ b/views/newRecipe.handlebars
@@ -22,7 +22,7 @@
         <div id="ingredients">
             <label>Ingredients:</label>
             <div class="ingredient">
-                <input type="text" name="ingredients[]" placeholder="Ingredient name" required>
+                <input id="ingredientInput" type="text" name="ingredients[]" placeholder="Ingredient name" required>
                 <input type="text" name="amount[]" placeholder="Amount of ingredient" required>
                 <select name="units[]">
                     <option value="G">G</option>
