--- a/public/css/style.css
+++ b/public/css/style.css
@@ -160,20 +160,23 @@ h2{
   margin-top: 40px;
 }
 
-#newRecipeForm {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  
-}
-#nameInput {
+.inputName {
   width: 300px;
+  padding: 10px;
 }
 #servingInput {
   width: 100px;
+  padding: 10px;
 }
 #name-servingInput {
+  display: flex;
   outline: 3px solid black;
-  
-  
+  align-items: center;
+  justify-content: center;
+  margin-top: 40px;
+  flex-wrap: wrap;
+}
+
+#ingredientInput {
+  width: 300px !important;
 }
