fixed put recipe route bug :P

--- a/views/recipes.handlebars
+++ b/views/recipes.handlebars
@@ -10,13 +10,13 @@
     <ul>
         {{#each recipes}}
         <li>
-            <p>Name: {{this.name}}</p>
+            <p id="recipeNameInput">{{this.name}}</p>
             <p>Serving Size: {{this.servingSize}}</p>
             <form action="/recipe/{{this.name}}" method="get">
                 <button type="submit">View Recipe</button>
             </form>
 
-            <button id="setActive" onclick="setActiveRecipe({{this.name}})" value="/api/recipe/{{this.name}}">Set Active</button>
+            <button id="setActive" onclick="setActiveRecipe('{{this.name}}')" value="/api/recipe/{{this.name}}">Set Active</button>
 
         </li>
         {{/each}}
