--- a/views/newRecipe.handlebars
+++ b/views/newRecipe.handlebars
@@ -6,9 +6,9 @@
 </head>
 <body>
     
-    
+    <h2>New Recipe</h2>
     <form id="newRecipeForm">
-        <h2>New Recipe</h2>
+        
         <div id="name-servingInput">
             <div id="nameInput">
                 <label for="recipeName">Recipe Name:</label>
@@ -20,28 +20,37 @@
             </div>
         </div>
         <div id="ingredients">
-            <label>Ingredients:</label>
             <div class="ingredient">
-                <input id="ingredientInput" type="text" name="ingredients[]" placeholder="Ingredient name" required>
-                <input type="text" name="amount[]" placeholder="Amount of ingredient" required>
-                <select name="units[]">
-                    <option value="G">G</option>
-                    <option value="KG">KG</option>
-                    <option value="ML">ML</option>
-                    <option value="L">L</option>
-                    <option value="TSP">TSP</option>
-                    <option value="TBSP">TBSP</option>
-                    <option value="CUP">CUP</option>
-                    <option value="OZ">OZ</option>
-                    <option value="LB">LB</option>
-                    <option value="EACH">EACH</option>
-                </select>
+                <div id="ingredientInput" >
+                    <label for="ingredients[]">Ingredient Name:</label>
+                    <input type="text" name="ingredients[]" required>
+                </div>
+                <div id="quantity-unit">
+                    <div id="quantityInput" >
+                        <label for="amount[]">Quantity:</label>
+                        <input type="text" name="amount[]"required>
+                    </div>
+                    <div id="unitInput">
+                        <label for="unit[]">Unit:</label>
+                        <select name="unit[]">
+                            <option value="G">G</option>
+                            <option value="KG">KG</option>
+                            <option value="ML">ML</option>
+                            <option value="L">L</option>
+                            <option value="TSP">TSP</option>
+                            <option value="TBSP">TBSP</option>
+                            <option value="CUP">CUP</option>
+                            <option value="OZ">OZ</option>
+                            <option value="LB">LB</option>
+                            <option value="EACH">EACH</option>
+                        </select>
+                    </div>
+                </div>
             </div>
         </div>
-        <br>
-        <button type="button" onclick="addIngredientField()">Add Ingredient</button>
-        <br><br>
-        <button type="submit">Add Recipe</button>
+        <button id="submitButton" type="submit">Save Recipe</button>
+        <button type="button" onclick="addIngredientField(this)">Add Ingredient</button>
+
     </form>
 </body>
 </html>
