--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,6 +16,7 @@
         <nav id="nav">
             <button class="btn" id="viewRecipes" onclick="(window.location='/recipe')">View Recipes</button>
             <button class="btn" id="home" onclick="(window.location='/')">Home</button>
+            <button class="btn" id="home" onclick="(window.location='/new-recipe')">New Recipe</button>
             {{#if logged_in}}
             <button class="btn" id="logout">Logout</button>
             {{else}}
