--- a/views/recipeDetails.handlebars
+++ b/views/recipeDetails.handlebars
@@ -4,23 +4,26 @@
         <title>Recipe Details</title>
         <script src="/js/shoppingCart.js" defer></script>
     </head>
-    <body>
-        <h2>{{recipe.name}}</h2>
-        <p>Serving Size: {{recipe.servingSize}}</p>
-        <h3>Ingredients:</h3>
-        <ul>
-            {{#each recipe.Ingredients}}
-            <li>{{this.name}} - {{this.amount}} {{this.unit}}</li>
-            {{/each}}
-        </ul>
-        <button onclick="addAllToCart([
-            {{#each recipe.Ingredients}}
-            { name: '{{this.name}}', amount: '{{this.amount}}', unit: '{{this.unit}}' },
-            {{/each}}
-        ])">Add All to Cart</button>
-        <a href="/recipe">Back</a>
-        
-
+    <body >
+        <div id="ingredientContainer">
+            <div id="selectedRecipe">
+                <h2 >{{recipe.name}}</h2>
+                <p>Serving Size: {{recipe.servingSize}}</p>
+                <h3>Ingredients:</h3>
+                <ul>
+                    {{#each recipe.Ingredients}}
+                    <li>{{this.name}} - {{this.amount}} {{this.unit}}</li>
+                    {{/each}}
+                </ul>
+                <button onclick="addAllToCart([
+                    {{#each recipe.Ingredients}}
+                    { name: '{{this.name}}', amount: '{{this.amount}}', unit: '{{this.unit}}' },
+                    {{/each}}
+                ])">Add All to Cart</button>
+                <button id="addNewRecipeButton" onclick="window.location.href='/api/shopping-cart/items'">Go To Cart</button>
+               
+            </div>    
+        </div>
 
 
     <script src="/js/activeRecipe.js"></script>
