--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,17 +1,26 @@
 <div class="left">
     {{#each dates as |date| }}
     <ul class="weekday">{{date.weekday}} {{date.month}}/{{date.day}}
-        <div class="dropdown">
+        {{!-- <div class="dropdown">
             <button onclick="myFunction()" class="add-button" id="">Add Meal</button>
             <div id="myDropdown" class="dropdown-content">
                 {{#each meals as |meal| }}
                 <button onclick="addMeal{{date.weekday}}()" id="">{{meal.name}}</button>
                 {{/each}}
             </div>
-        </div>
+        </div> --}}
+        <label for="addMeal">Add a Meal:</label>
+
+        <select name="meals" id="meals">
+            {{#each meals as |meal| }}
+            <option value="{{meal.name}}">{{meal.name}}</option>
+            {{/each}}
+        </select>
     </ul>
     {{/each}}
 </div>
+
+
 
 {{!--
 
