styling for random page

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,6 +17,7 @@
             <button class="btn" id="viewRecipes" onclick="(window.location='/recipe')">View Recipes</button>
             <button class="btn" id="home" onclick="(window.location='/')">Home</button>
             <button class="btn" id="home" onclick="(window.location='/new-recipe')">New Recipe</button>
+            <button class="btn" onclick="(window.location='/apiRecipe')">Random Recipe</button>
             {{#if logged_in}}
             <button class="btn" id="logout">Logout</button>
             {{else}}
