--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,162 +1,164 @@
 * {
-    margin: 0px;
-    padding-right: 0px;
+  margin: 0px;
+  padding-right: 0px;
 }
+
 .title-board {
-    background-image: url(../images/download\ \(1\).jpeg);
-    border-color: blue;
-    height: 15vh;
-    box-shadow: 0 0 85px rgb(18, 18, 18) inset;
-    outline: solid 0.5px rgb(29, 29, 29);
-    display: flex;
+  background-image: url(../images/download\ \(1\).jpeg);
+  border-color: blue;
+  height: 15vh;
+  box-shadow: 0 0 85px rgb(18, 18, 18) inset;
+  outline: solid 0.5px rgb(29, 29, 29);
+  display: flex;
 }
 
 h1 {
-    height: fit-content;
-    width: fit-content;
-    align-content: space-around;
-    padding-top: 15px;
-    background-color: transparent;
-    color: azure;
-    font-family: "Lobster", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    justify-content: center;
-    font-size: 75px;
+  height: fit-content;
+  width: fit-content;
+  align-content: space-around;
+  padding-top: 15px;
+  background-color: transparent;
+  color: azure;
+  font-family: "Lobster", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  justify-content: center;
+  font-size: 75px;
 }
 
 .day-of-week {
-    height: 75vh;
-    display: flex;
+  height: 75vh;
+  display: flex;
 }
 
 .left {
-    display: flex;
-    width: fit-content;
-    
+  display: flex;
+  width: fit-content;
+
 }
 
 .weekday {
-    margin: 20px;
-    padding-left: 0px;
-    background-color: tomato;
-    width: 40%;
-    text-align: center;
-    font-family: "Lobster", sans-serif;
-    color: aliceblue;
-    border-radius: 15px;
-    box-shadow: 3px 4px 5px 0px rgb(18, 18, 18);
-    font-size: 30px;
-    height: 50vh;
+  margin: 20px;
+  padding-left: 0px;
+  background-color: tomato;
+  width: 40%;
+  text-align: center;
+  font-family: "Lobster", sans-serif;
+  color: aliceblue;
+  border-radius: 15px;
+  box-shadow: 3px 4px 5px 0px rgb(18, 18, 18);
+  font-size: 30px;
+  height: 50vh;
 }
 
 .right {
-    background-color: white;
+  background-color: white;
 
 }
 
 .shopping-list {
-    background-image: url(./shopping-cart.jpeg);
-    background-size: 100% 100%;
-    background-repeat: no-repeat;
-    height: 33%;
-    padding: 0%;
+  background-image: url(./shopping-cart.jpeg);
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  height: 33%;
+  padding: 0%;
 }
 
 .past-recipes {
-    background-image: url(./past-tense.png);
-    background-size: 100% 100%;
-    background-repeat: no-repeat;
-    height: 33%;
-    padding: 0%;
+  background-image: url(./past-tense.png);
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  height: 33%;
+  padding: 0%;
 }
 
 .new-recipes {
-    background-image: url(./recipes.png);
-    background-size: 100% 100%;
-    background-repeat: no-repeat;
-    height: 34%;
-    padding: 0%;
+  background-image: url(./recipes.png);
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  height: 34%;
+  padding: 0%;
 }
 
 .login-background {
-    background-image: url(/public/images/01-The-Benefits-of-Meal-Prepping.webp);
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
-    box-shadow: 0 0 100px rgb(18, 18, 18) inset;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  background-image: url(/public/images/01-The-Benefits-of-Meal-Prepping.webp);
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  box-shadow: 0 0 100px rgb(18, 18, 18) inset;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .box-login {
-    background-color: whitesmoke;
-    text-align: center;
-    border: 3px solid tomato;
-    width: 40%;
-    height: 40%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  background-color: whitesmoke;
+  text-align: center;
+  border: 3px solid tomato;
+  width: 40%;
+  height: 40%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 form {
-    border: 3px solid #f1f1f1;
-  }
-  
-  /* Full-width inputs */
-  input[type=text], input[type=password] {
-    width: 100%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
-    box-sizing: border-box;
-  }
-  
-  /* Set a style for all buttons */
-  button {
-    background-color: #04AA6D;
-    color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
-    border: none;
-    cursor: pointer;
-    width: fit-content;
-  }
-  
-  /* Add a hover effect for buttons */
-  button:hover {
-    opacity: 0.8;
-  }
-  
-  /* Avatar image */
-  img.avatar {
-    width: 40%;
-    border-radius: 50%;
-  }
-  
-  /* Add padding to containers */
-  .box-login {
-    padding: 16px;
-  }
-  
-  .btn {
-    background-color: tomato;
-  }
+  border: 3px solid #f1f1f1;
+}
 
-  .add-button {
-    align-items: flex-end;
-  }
+/* Full-width inputs */
+input[type=text],
+input[type=password] {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
+}
 
-  #nav {
-    display: flex;
-    justify-content: flex-end;
-    height: 5vh;
-  }
+/* Set a style for all buttons */
+button {
+  background-color: #04AA6D;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  cursor: pointer;
+  width: fit-content;
+}
 
-h2{
+/* Add a hover effect for buttons */
+button:hover {
+  opacity: 0.8;
+}
+
+/* Avatar image */
+img.avatar {
+  width: 40%;
+  border-radius: 50%;
+}
+
+/* Add padding to containers */
+.box-login {
+  padding: 16px;
+}
+
+.btn {
+  background-color: tomato;
+}
+
+.add-button {
+  align-items: flex-end;
+}
+
+#nav {
+  display: flex;
+  justify-content: flex-end;
+  height: 5vh;
+}
+
+h2 {
   text-align: center;
   margin-top: 40px;
 }
@@ -166,62 +168,75 @@ h2{
 input {
   border-radius: 10px;
 }
+
 button {
-  border-radius:  10px;
+  border-radius: 10px;
 }
+
 #newRecipeForm {
   margin-left: 100px;
   margin-right: 100px;
   border: 3px solid tomato;
   background-color: #777783;
 }
+
 #nameInput {
   width: 300px;
   padding: 10px;
 }
+
 #servingInput {
   width: 100px;
   padding: 10px;
 }
+
 #name-servingInput {
   display: flex;
   justify-content: left;
   margin-top: 40px;
   flex-wrap: wrap;
 }
-.ingredient{
+
+.ingredient {
   display: flex;
   justify-content: left;
   margin-top: 10px;
   flex-wrap: wrap;
 }
+
 #ingredientInput {
-  width: 300px ;
+  width: 300px;
   padding: 10px;
 }
-#quantityInput{
+
+#quantityInput {
   width: 100px;
   padding: 10px;
 }
-#unitInput{
+
+#unitInput {
   padding-left: 10px;
   padding-top: 45px;
 }
-#quantity-unit{
+
+#quantity-unit {
   display: flex;
   justify-content: left;
   flex-wrap: wrap;
-  
+
 }
-#removeButton{
+
+#removeButton {
   margin-top: 33px;
   height: fit-content !important;
   margin-left: 10px;
 }
-#submitButton{
+
+#submitButton {
   margin-right: 20px;
   margin-left: 10px;
 }
+
 #recipeContainer {
   display: flex;
   justify-content: center;
@@ -229,6 +244,7 @@ button {
   text-align: center;
   margin-top: 50px;
 }
+
 #recipeInfo {
   display: inline-block;
   margin-top: 40px;
@@ -240,11 +256,13 @@ button {
   margin: 10px;
   text-align: center;
 }
+
 #recipeNameInput {
   font-weight: bold;
   text-decoration: underline;
   margin-bottom: 10px;
 }
+
 #addNewRecipeButton {
   margin-left: 10px;
   margin-top: 10px;
@@ -252,8 +270,9 @@ button {
 
 #recipeInfo button {
   width: 120px;
-  border: none!important;
+  border: none !important;
 }
+
 #deleteForm {
   display: inline-block;
   margin-top: 40px;
@@ -265,28 +284,32 @@ button {
   margin: 10px;
   text-align: center;
 }
-#ingredientContainer{
-width: 100vw;
-display: flex;
-justify-content: center;
-margin-top: 50px;
+
+#ingredientContainer {
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  margin-top: 50px;
 }
 
-#selectedRecipe{
+#selectedRecipe {
   width: 40vw;
   border: 3px solid tomato;
   background-color: #777783;
   padding: 10px;
 }
+
 #selectedRecipe p {
   text-align: center;
   padding-bottom: 30px;
 }
-#selectedRecipe h3{
+
+#selectedRecipe h3 {
   padding-left: 25px;
   text-decoration: underline;
   padding-bottom: 10px;
 }
+
 #selectedRecipe button {
   justify-content: end;
   margin-top: 10px;
@@ -299,10 +322,12 @@ margin-top: 50px;
   text-align: left;
   background-color: #777783;
 }
+
 #deleteForm ul {
   text-align: left;
   margin-bottom: 20px;
 }
+
 #deleteForm button {
   margin-left: 25px;
 }
@@ -313,8 +338,9 @@ margin-top: 50px;
   justify-content: center;
 }
 
-  /* Dropdown button on hover & focus */
-.add-button:hover, .dropbtn:focus {
+/* Dropdown button on hover & focus */
+.add-button:hover,
+.dropbtn:focus {
   background-color: #2980B9;
 }
 
@@ -330,7 +356,7 @@ margin-top: 50px;
   position: absolute;
   background-color: #f1f1f1;
   min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
 }
 
@@ -343,7 +369,42 @@ margin-top: 50px;
 }
 
 /* Change color of dropdown links on hover */
-.dropdown-content a:hover {background-color: #ddd;}
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
 
 /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
-.show {display:block;}
+.show {
+  display: block;
+}
+
+#randomHeader {
+  text-align: center;
+  font-size: larger;
+}
+
+#recipeContainer {
+  display: block;
+}
+
+.apiBtnDiv {
+  text-align: center;
+}
+
+#randomRecipeIngredients {
+  list-style: none;
+  background-color: tomato;
+  margin-left: 100px;
+  margin-right: 100px;
+  border-radius: 55px;
+}
+
+#randomRecipeName {
+  text-decoration: underline;
+  font-weight: 600;
+  font-size: xx-large;
+}
+
+.hide {
+  display: none;
+}
