--- a/views/apiRecipe.handlebars
+++ b/views/apiRecipe.handlebars
@@ -1,11 +1,13 @@
-<button id="apiBtn">Get Random Recipe</button>
+<div class="apiBtnDiv">
+    <button id="apiBtn">Get Random Recipe</button>
+    <h2 id="randomHeader">Click button to get a random recipe!</h2>
+</div>
 <div id="recipeContainer">
-    <h2>Click button to get a random recipe!</h2>
     <p id="randomRecipeName"></p>
-    <img id="randomRecipeImage" src="" alt="Recipe Image">
+    <img id="randomRecipeImage" class="hidden hide" src="" alt="Recipe Image">
     <p id="randomRecipeServings"></p>
     <ul id="randomRecipeIngredients"></ul>
-    <a id="randomRecipeLink" href="#" target="_blank">View Recipe</a>
+    <a id="randomRecipeLink" href="#" target="_blank" class="hidden hide">View Recipe</a>
     {{!-- button to add recipe items to shopping cart --}}
     <button id="addRandomToCartBtn">Add These Ingredients to Cart</button>
     {{!-- button to add random recipe to my recipes --}}
