set button for grocery list

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -24,8 +24,7 @@
             <button class="btn" id="login" onclick="(window.location='/login')">Login</button>
             <button class="btn" id="createUser" onclick="(window.location='/newUser')">Create Account</button>
             {{/if}}
-            <button class="btn" id="new-recipes">Recommendations</button>
-            <button class="btn" id="shopping-cart">Grocery List</button> 
+            <button class="btn" id="shopping-cart" onclick="(window.location='/api/shopping-cart/items')">Grocery List</button> 
         </nav>
     </header>
 
