fixed page reload error and added some comments

--- a/views/apiRecipe.handlebars
+++ b/views/apiRecipe.handlebars
@@ -1,6 +1,6 @@
 <div class="apiBtnDiv">
     <button id="apiBtn">Get Random Recipe</button>
-    <h2 id="randomHeader">Click button to get a random recipe!</h2>
+    <h2 id="randomHeader" type="button">Click button to get a random recipe!</h2>
 </div>
 <div id="recipeContainer">
     <p id="randomRecipeName"></p>
@@ -9,9 +9,9 @@
     <ul id="randomRecipeIngredients"></ul>
     <a id="randomRecipeLink" href="#" target="_blank" class="hidden hide">View Recipe</a>
     {{!-- button to add recipe items to shopping cart --}}
-    <button id="addRandomToCartBtn">Add These Ingredients to Cart</button>
+    <button id="addRandomToCartBtn" type="button">Add These Ingredients to Cart</button>
     {{!-- button to add random recipe to my recipes --}}
-    <button id="addRandomToRecipeBtn">Add This Random Recipe to My Recipes</button>
+    <button id="addRandomToRecipeBtn" type="button">Add This Random Recipe to My Recipes</button>
 </div>
 
 <script src="/js/apiRecipe.js"></script>
