added a lil more styling

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -34,6 +34,13 @@ h2 {
     color: tomato;
 }
 
+h4 {
+  font-family: "Lobster", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 25px;
+}
+
 .day-of-week {
   height: 75vh;
   display: flex;
@@ -185,7 +192,7 @@ button {
   margin-left: 100px;
   margin-right: 100px;
   border: 3px solid tomato;
-  background-color: #777783;
+  background-color: whitesmoke;
 }
 
 #nameInput {
@@ -303,7 +310,7 @@ button {
 #selectedRecipe {
   width: 40vw;
   border: 3px solid tomato;
-  background-color: #777783;
+  background-color:whitesmoke;
   padding: 10px;
 }
 
@@ -328,7 +335,7 @@ button {
   width: fit-content;
   padding-right: 25px;
   text-align: left;
-  background-color: #777783;
+  background-color: whitesmoke;
 }
 
 #deleteForm ul {
